--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,9 @@ set(CMAKE_C_STANDARD 99)
 add_executable(dbms_extension url.c src/models.c)
 
 INCLUDE_DIRECTORIES(
-        "/usr/local/pgsql/include/server "
+#        "/usr/local/pgsql/include/server"
+        "/usr/lib/postgresql/12/lib"
+        "/usr/include/postgresql/12/server"
+        "/usr/include/postgresql"
+
 )
